examples/test/testpolicy966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy966
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key35: value29
      key2: value48
      key26: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value17
      podSelector:
        matchLabels:
          key14: value23
          key22: value40
